# arches-orm

./: .gitignore  404.html  README.md  index.html  pyproject.toml
.github/workflows/: docs.yml  python-publish.yml  python-static-ci.yml
arches_orm/: __init__.py  adapter.py  collection.py  datatypes.py  errors.py  hooks.py  models.py  utils.py  view_models.py  wkrm.py  wrapper.py
arches_orm/_internals/: hooks.py  relations.py  tile_view_models.py  translation.py  view_models.py  wkrm.py  wrapper.py
arches_orm/arches_django/: __init__.py  adapter.py  apps.py  bulk_create.py  filters.py  hooks.py  middleware.py  pseudo_nodes.py  wrapper.py
arches_orm/arches_django/datatypes/: __init__.py  _register.py  concepts.py  date.py  django_group.py  domains.py  edtf.py  geojson_feature_collection.py  resource_instances.py  semantic.py  string.py  user.py
arches_orm/arches_django/query_builder/: consts.py  expressions.py  extractions.py  filters.py  query_builder.py  utilities.py
arches_orm/arches_django/query_builder/sub_classes/: annotations.py  filters.py  modifiers.py  selectors.py
arches_orm/arches_django/responses/: pagination.py
arches_orm/dummy/: __init__.py  adapter.py  wrapper.py
arches_orm/graphql/: _asgi.py  auth.py  concepts.py  django_asgi.py  resource_api_asgi.py  resource_models.py  resources.py  utils.py
arches_orm/pseudo_node/: protocols.py  pseudo_nodes.py  value_list.py
arches_orm/pseudo_node/datatypes/: _register.py
arches_orm/resource_api/: __init__.py  adapter.py  wrapper.py
arches_orm/resource_api/datatypes/: _datatype.py  _register.py  concepts.py  django_group.py  resource_instances.py  resource_models.py  semantic.py  string.py  user.py
arches_orm/static/: __init__.py  adapter.py  wrapper.py
arches_orm/static/datatypes/: __init__.py  _register.py  concept_types.py  concepts.py  date.py  django_group.py  edtf.py  geojson_feature_collection.py  resource_instances.py  resource_models.py  semantic.py  string.py  user.py
arches_orm/view_models/: __init__.py  _base.py  concepts.py  datetime.py  edtf.py  geojson_feature_collection.py  group.py  node_list.py  resources.py  semantic.py  string.py  user.py
docs/: make_doc.py  quickstart.md
docs/arches_orm/: adapter.md  hooks.md  index.md  models.md  utils.md  view_models.md  wkrm.md  wrapper.md
docs/arches_orm/arches_django/: adapter.md  hooks.md  index.md  pseudo_nodes.md  wrapper.md
docs/arches_orm/arches_django/datatypes/: concepts.md  index.md  resource_instances.md  semantic.md  string.md  user.md
docs/arches_orm/view_models/: concepts.md  index.md  node_list.md  resources.md  semantic.md  string.md  user.md
docs/quickstart/: index.html
example/: Untitled.ipynb
reference/arches_orm/adapter/: index.html
reference/arches_orm/collection/: index.html
reference/arches_orm/datatypes/: index.html
reference/arches_orm/errors/: index.html
reference/arches_orm/static/: index.html
reference/arches_orm/static/adapter/: index.html
reference/arches_orm/static/wrapper/: index.html
reference/arches_orm/utils/: index.html
reference/arches_orm/wkrm/: index.html
reference/arches_orm/wrapper/: index.html
search/: search_index.json
tests/: arches_fixtures.py  conftest.py  test_arches_django.py  test_client.py
tests/_django/: Activity.json  Person.json  settings.py  test.sql
tests/arches_django/: conftest.py  test_arches_django.py  test_arches_django_query_builder.py  test_django_graphql.py  test_hello_world.py  test_hooks.py  test_permissions.py
tests/arches_django/_django/: Person.json  collections.xml  settings.py  settings_graphql.py  test.sql
tests/arches_django/_django/datatypes/: user.py
tests/arches_django/seed/default/activity/: graph.json
tests/arches_django/seed/default/cars/: business-data.json  graph-temp.txt
tests/arches_django/seed/default/hobbies/: business-data.json  graph.json
tests/arches_django/seed/default/person/: graph.json
tests/arches_django/seed/default/rdf/: collections.xml
tests/arches_django/sub_tests/: all.py
tests/arches_django/sub_tests/arches_django_query_builder/read/filters/: where.py
tests/arches_django/sub_tests/arches_django_query_builder/read/modifiers/: __init__.py
tests/arches_django/sub_tests/arches_django_query_builder/read/selectors/: all.py
tests/arches_django/sub_tests/queries/read/: order_by.py  where.py
tests/dummy/: conftest.py  test_dummy.py
tests/resource_api/: _resource_api_graphql.py  conftest.py  test_resource_api.py
tests/resource_api/_datatypes/: tm65.py
tests/resource_api/_models/: Arches Plugin.json  Group.json
tests/resource_api/_responses/: search.json  tiles.json
tests/static/: conftest.py  test_static.py
tests/static/_artifacts/: export_test_group.json  export_test_person.json
tests/static/_models/: Group.json
tests/static/_resources/: Root Group.json
tests/utilities/: common.py
tests/utilities/asserts/: datatypes.py
tests/utilities/seeders/default/: person.py
(+4 files in other folders)
