[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "arches-orm"
version = "0.0.1"
authors = [
    {name = "Phil Weir", email = "phil.weir@flaxandteal.co.uk"},
]
description = "Experimental Arches Object Relational Mapper"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "python-slugify",
    "typing_extensions",
    "lxml",
    "tabulate",
    "geojson",
    "rdflib",
    "pydantic",
    "eval_type_backport",
]

[project.optional-dependencies]
graphql = [
    "starlette",
    "starlette-context",
    "starlette_graphene3",
    "oauth2_provider",
    "aiodataloader",
    "django_oauth2_provider",
    "graphene_file_upload",
    "graphene",
    "uvicorn[standard]",
    "aiohttp"
]
arches = [
    "arches",
]
test = [
    "jsondiff",
    "pytest",
    "httpx",
    "spatialite",
    "pytest_django",
    "arches_graphql_client",
    "pytest-asyncio"
]
