[build-system]
requires = ["hatchling < 1.22"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arches_orm"]

[tool.portray]
modules = [
    "arches_orm.static",
    "arches_orm.adapter",
    "arches_orm.collection",
    "arches_orm.datatypes",
    "arches_orm.errors",
    "arches_orm.utils",
    "arches_orm.wkrm",
    "arches_orm.wrapper",
]
extra_markdown_extensions = [
  "pymdownx.inlinehilite",
  "pymdownx.snippets",
  "pymdownx.highlight",
]

[tool.portray.pdocs]
exclude_source = true

[tool.portray.mkdocs]
markdown_extensions = [
  { "pymdownx.superfences" = {} }
]

[tool.ruff.lint]
select = ["D", "F", "B"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[project]
name = "arches-orm"
description = "Representation of Arches graphs for client and server side manipulation"
homepage = "https://github.com/flaxandteal/arches-orm"
repository = "https://github.com/flaxandteal/arches-orm"
documentation = "https://flaxandteal.github.io/arches-orm"
readme = "README.md"
version = "0.3.0a2"
authors = [
    {name = "Phil Weir", email = "phil.weir@flaxandteal.co.uk"},
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "python-slugify",
    "typing_extensions",
    "lxml",
    "tabulate",
    "geojson",
    "rdflib",
    "pydantic",
    "eval_type_backport",
    "edtf",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
graphql = [
    "starlette",
    "starlette-context",
    "starlette_graphene3",
    "oauth2_provider",
    "aiodataloader",
    "django_oauth2_provider",
    "graphene_file_upload",
    "graphene",
    "uvicorn[standard]",
    "aiohttp"
]
arches = [
    "arches",
]
test = [
    "jsondiff",
    "pytest",
    "httpx",
    "ruff",
    "mypy",
    "coverage",
    "spatialite",
    "pytest_django",
    "arches_graphql_client @ git+https://github.com/flaxandteal/arches_graphql_client#release/0.0.11",
    "pytest-asyncio"
]
docs = [
  "portray @ git+https://github.com/flaxandteal/portray.git#v1.8.0-fat",
  "mkdocs-material==7.0"
]
